--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -121,7 +121,6 @@ rm(mydf)
 3. Una ventaja de trasformar en tibble es la visualización. Escribe directamente el nombre de la variable y observa la visualización. Posteriormente usa la función `glimpse` sobre `cran` y observa el resultado.
 ```{r}
 cran
-
 glimpse(cran)
 ```
 # dplyr
@@ -129,7 +128,9 @@ glimpse(cran)
 
 4. Elige únicamente las variables `ip_id, package, country`
 ```{r}
-
+cran$ip_id
+cran$package
+cran$country
 ```
 5. Elige todas las variables entre `r_arch y country` 
 ```{r}
