--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -134,7 +134,7 @@ cran$country
 ```
 5. Elige todas las variables entre `r_arch y country` 
 ```{r}
-
+select(cran, r_arch, r_os, package, version, country)
 ```
 5. Puedes usar el signo (-) para no coger una columna determinada. Selecciona todas las columnas menos las que están entre `date y size` 
 ```{r}
