--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -133,7 +133,7 @@ subset(cran, package == "plotly" & r_version == "3.5.1")
 ```
 6. Elige aquellas descargas realizadas desde España (ES), con versiones de R superiores a la 3.4.0
 ```{r}
-
+subset(cran, country == "ES" & r_version > "3.4.0")
 ```
 
 7. Elige aquellas descargas realizadas desde España (ES), o Portugal (PT).
