--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -138,9 +138,7 @@ subset(cran, country == "ES" & r_version > "3.4.0")
 
 7. Elige aquellas descargas realizadas desde España (ES), o Portugal (PT).
 ```{r}
-
-
-
+subset(cran, country == "ES" | country == "PT")
 ```
 
 8. Elige aquellas descargas cuyo tamaño supera los 100500 bytes desde un sistema operativo  `linux-gnu`.
