--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -155,7 +155,7 @@ cran2 <- select(cran, size:ip_id)
 ```
 11. Ordena `cran2` en orden ascendente según la variable `ip_id`.
 ```{r}
-
+cran2[order(cran2$ip_id), ]
 ```
 12. Ordena `cran2` en orden descendente según la variable `ip_id`.
 ```{r}
