--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -155,7 +155,7 @@ cran2 <- select(cran, size:ip_id)
 ```
 11. Ordena `cran2` en orden ascendente según la variable `ip_id`.
 ```{r}
-cran2[order(cran2$ip_id), ]
+cran2[order(cran2$ip_id, decreasing = FALSE), ]
 ```
 12. Ordena `cran2` en orden descendente según la variable `ip_id`.
 ```{r}
@@ -167,6 +167,7 @@ cran2[order(cran2$package, cran2$ip_id), ]
 ```
 13. Ordena `cran2` según los valores de `country` (ascendente), `r_version` (desdencente) e `ip_id`(ascendente).
 ```{r}
+cran2[order(cran2$country, cran2$r_version, cran2$ip_id), decreasing = c(F, T, F), ]
 ```
 14. Selecciona el subconjunto formado por las variables, del `cran`, `ip_id, package y size` 
 en este orden y almacénalas en `cran3`.
