--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -189,7 +189,7 @@ mutate(cran3, correct_size = size + 1000)
 ```
 18. Usa `summarise` para determinar el valor medio del tamaño de las descargas realizadas en `cran` y almacenálo en la variable `avg_bytes`
 ```{r}
-
+avg_bytes <- summarise(cran, sum(size))
 ```
 # Agrupamientos
 
