--- a/CarreraTydiverse_Alumno.Rmd
+++ b/CarreraTydiverse_Alumno.Rmd
@@ -203,7 +203,7 @@ ungroup(by_package)
 
 20. Usa la función `summarise` sobre  el elemento agrupado y calcula  el valor medio de la variable `size`. Observa el efecto del agrupamiento en el resultado.
 ```{r}
-
+summarize(by_package, mean(size))
 ```
 21. Para el agrupamiento creado calcula: 
 + . count = n()
